#
# Makefile.am for y2c_snd/doc/implementation
#

docdir = @DOCDIR@
htmldir = $(docdir)/y2c_snd

html_DATA =		\
	design-1.html		\
	design-2.html		\
	design-3.html		\
	design.html		\
	index.html		\
	sound-already.jpg	\
	sound-config.jpg	\
	sound-error.jpg		\
	sound-found.jpg		\
	sound-manual.jpg	\
	sound-notfound.jpg	\
	sound-options.jpg	\
	sound-success.jpg	\
	sound-volume.jpg

EXTRA_DIST = $(html_DATA)
